--- a/cluster/tests/BUILD.bazel
+++ b/cluster/tests/BUILD.bazel
@@ -12,22 +12,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load("@rules_python//python:defs.bzl", "py_library")
+load("@rules_python//python:defs.bzl", "py_test")
 
 package(default_visibility = ["//visibility:public"])
 
-py_library(
-    name = "sgd_classifier",
-    srcs = ["sgd_classifier.py"],
+py_test(
+    name = "kmeans_test",
+    srcs = ["kmeans_test.py"],
     deps = [
-        "//sml/utils:fxp_approx",
-    ],
-)
-
-py_library(
-    name = "logistic",
-    srcs = ["logistic.py"],
-    deps = [
-        "//sml/utils:fxp_approx",
+        "//sml/cluster:kmeans",
+        "//spu:init",
+        "//spu/utils:simulation",
     ],
 )
