--- a/linear_model/emulations/BUILD.bazel
+++ b/linear_model/emulations/BUILD.bazel
@@ -12,22 +12,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load("@rules_python//python:defs.bzl", "py_library")
+load("@rules_python//python:defs.bzl", "py_binary")
 
 package(default_visibility = ["//visibility:public"])
 
-py_library(
-    name = "sgd_classifier",
-    srcs = ["sgd_classifier.py"],
+py_binary(
+    name = "sgd_classifier_emul",
+    srcs = ["sgd_classifier_emul.py"],
     deps = [
-        "//sml/utils:fxp_approx",
+        "//examples/python/utils:dataset_utils",  # FIXME: remove examples dependency
+        "//sml/linear_model:sgd_classifier",
+        "//sml/utils:emulation",
     ],
 )
 
-py_library(
-    name = "logistic",
-    srcs = ["logistic.py"],
+py_binary(
+    name = "logistic_emul",
+    srcs = ["logistic_emul.py"],
     deps = [
-        "//sml/utils:fxp_approx",
+        "//sml/linear_model:logistic",
+        "//sml/utils:emulation",
     ],
 )
