--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,9 +59,15 @@ workflows:
         - not: << pipeline.parameters.GHA_Action >>
         - not: << pipeline.parameters.GHA_Meta >>
     jobs:
-      - unittest/continue:
+      - path-filtering/filter:
+          base-revision: main
           config-path: .circleci/continue-config.yml
           tag: "3.9"
+          mapping: |
+            sml/.* build-and-run true
+            .circleci/.* build-and-run true
+            setup.py build-and-run true
+            requirements build-and-run true
       - lint
   publish-workflow:
     jobs:
