--- a/.circleci/release-config.yml
+++ b/.circleci/release-config.yml
@@ -48,7 +48,8 @@ commands:
       - run:
           name: "build package and publish"
           command: |
-            set +e
+            set -ex
+
             conda create -n build python=<< parameters.python_ver >> -y
             conda activate build
 
