--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dev = [
     "pre-commit",
     "pytest",
     # Emulations and tests dependencies
-    "pandas",
+    "pandas==1.5.3",
     "scikit-learn==1.5.2",
 ]
 
