--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,18 @@ classifiers = [
 requires-python = ">=3.10,<3.12"
 dependencies = [
     "spu==0.9.4.dev20250618",
-    "pandas==1.5.3",
-    "scikit-learn==1.5.2",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = ["pylint", "pre-commit", "pytest"]
+dev = [
+    "pylint",
+    "pre-commit",
+    "pytest",
+    # Emulations and tests dependencies
+    "pandas==1.5.3",
+    "scikit-learn==1.5.2",
+]
 
 [project.urls]
 Homepage = "https://github.com/secretflow/sml"
