--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,21 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 dev = [
-    "pylint",
+    # Development and code quality tools
     "pre-commit",
     "pytest",
+    "pylint",
+
+    # Code formatting and linting (matching pre-commit versions)
+    "black>=24.4.2",
+    "isort>=5.13.2",
+    "flake8>=7.3.0",
+    "flake8-absolute-import>=1.0.0",
+    "autoflake>=2.3.1",
+    "pyupgrade>=3.16.0",
+    "mypy",
+    "pydocstyle",
+
     # Emulations and tests dependencies
     "pandas==1.5.3",
     "scikit-learn==1.5.2",
@@ -76,19 +88,28 @@ warn_unused_configs = true
 disallow_untyped_defs = false
 
 [tool.flake8]
-max-line-length = 88
+max-line-length = 120
+extend-select = ["ABS101"]
 extend-ignore = [
     "E203",  # whitespace before ':'
     "W503",  # line break before binary operator
     "E402",  # module level import not at top of file
     "E501",  # line too long
-    "F401",  # imported but unused
+    "F401",  # module imported but unused
     "F841",  # local variable assigned but never used
     "F541",  # f-string is missing placeholders
-    "E711",  # comparison to None should be 'if cond is None:'
+    "E711",  # comparison to None should be 'is' or 'is not'
     "E266",  # too many leading '#' for block comment
-    "E722",  # do not use bare 'except'
-    "E902",  # FileNotFoundError
+    "E722",  # do not use bare except
+    "E902",  # TokenError or IndentationError
+    "E741",  # ambiguous variable name
+    "E712",  # comparison to True should be 'is' or 'is not'
+    "E731",  # do not assign a lambda expression, use a def
+    "F403",  # 'from module import *' used; unable to detect undefined names
+    "F405",  # name may be undefined, or defined from star imports
+    "F811",  # redefinition of unused name
+    "F901",  # raise NotImplemented should be raise NotImplementedError
+    "W293",  # blank line contains whitespace
 ]
 exclude = [
     ".git",
@@ -98,6 +119,9 @@ exclude = [
     "venv",
     "build",
     "dist",
+]
+per-file-ignores = [
+    "sml/__init__.py:ABS101",
 ]
 
 [tool.pydocstyle]
