--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,4 +49,4 @@ repos:
     rev: 7.3.0
     hooks:
       - id: flake8
-        additional_dependencies: [flake8-absolute-import]
+        additional_dependencies: [flake8-absolute-import, flake8-pyproject]
