--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,8 @@ dev = [
     "build",
 
     # Emulations and tests dependencies
-    "pandas==1.5.3",
-    "scikit-learn==1.5.2",
+    "pandas>=1.5.3",
+    "scikit-learn>=1.5.2,<1.7.0",
     "statsmodels>=0.11.1",
 ]
 
