--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -37,4 +37,5 @@ jobs:
       - name: Publish to TestPyPI
         run: uv publish --publish-url https://test.pypi.org/legacy/
         env:
-          UV_PUBLISH_TOKEN=: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          UV_PUBLISH_USERNAME: __token__
+          UV_PUBLISH_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
