--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,11 @@
 requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=8"]
 build-backend = "setuptools.build_meta"
 
+[[tool.uv.index]]
+name = "aliyun"
+url = "https://mirrors.aliyun.com/pypi/simple/"
+default = true
+
 [project]
 name = "sf-sml"
 description = "Secretflow Secure Machine Learning"
@@ -12,11 +17,10 @@ authors = [
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-requires-python = ">=3.10,<3.12"
-dependencies = ["spu==0.9.4.dev20250618"]
+requires-python = ">=3.11,<3.12"
+dependencies = ["spu==0.10.0.dev20251208"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
